[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/stars/star4.png" type="Texture" id=1]
[ext_resource path="res://source/scenes/props/space/collectable_star.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/space/star_04.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CircleShape2D" id=3]
radius = 82.0061

[node name="CollectableStar" type="Area2D"]
script = ExtResource( 2 )
color = Color( 0.239216, 0.0784314, 0.0784314, 1 )

[node name="Star" type="Sprite" parent="."]
self_modulate = Color( 0.705882, 0.321569, 0.321569, 1 )
material = SubResource( 2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Star04" type="Sprite" parent="Star"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3.8147e-06, -3.8147e-06 )
scale = Vector2( 8.2, 8.2 )

[connection signal="body_entered" from="." to="." method="_on_CollectableStar_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
